--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<h1>testing1234</h1>
-<h2>22222222</h2>
-<p>qwert1234_______sodkoskdoskd</p>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title>Portafolio Numfar</title>
+	</head>
+	
+	<body>
+		<h1 align = "right"> Titulo? </h1>
+		<p align = "right"> Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla </p>
+		<p align = "left"><strong>Izquierda</strong></p>
+		<h4 align = "center"> ⧹༼◕ ͜ﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞo.◕ ༽⧸
+ </h4>
+	</body>
+	
+</html>
