--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<h1 align = "right"> Titulo? </h1>
 		<p align = "right"> Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla </p>
 		<p align = "left"><strong>Izquierda</strong></p>
-		<h4 align = "center"> ⧹༼◕ ͜ﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞo.◕ ༽⧸
- </h4>
+		<h4 align = "center"> </h4>
 	</body>
 	
 </html>
