actualizando index.html, styles.css y correccion register.html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html>
 
 	<head>
-		<title>Portafolio Numfar</title>
+		<meta name="keywords" content="portfolio, webstack, programador" />
+		<meta charset="utf-8"/>
+		<meta name="description" content="portfolio web"/>
+	    <link rel="stylesheet" href="styles.css"/>
+
+		<title>Titulo de Navegador</title>
 	</head>
 	
 	<body>
-		<h1 align = "right"> Titulo? </h1>
-		<p align = "right"> Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla Bla </p>
-		<p align = "left"><strong>Izquierda</strong></p>
-		<h4 align = "center">⧹༼◕ ͜ﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞﱞo.◕ ༽⧸ </h4>
+		<header>
+			<h1>Titulo Principal de la Pagina</h1>
+			<a class="log" href="login.html">Iniciar sesion</a>
+			<a class="log" href="registro.html">Registro</a>
+		</header>
+		<article>
+			<p>///Trabajando///</p>
+			<img src="https://media.tenor.com/OQKmgtcvz6MAAAAM/monkey-cymbal.gif" alt="*Trabajando*" width="40%"><br>
+		</article>
+		<footer>
+			<p>Numfar</p>
+		</footer>
 	</body>
 	
 </html>
