--- a/registro.html
+++ b/registro.html
@@ -1,7 +1,1 @@
-<h1>Register</h1>
-<p>sssssssssssssssssssssssssssddddddddddddddddffffffffffffdfsdfsdfsdf23
- sdifjsodijfojsdf
-  sjdfoijsdoif justify
-  222222222222222222222
-  3333333333333333333
-  4444444444444444      fin</p>
+<h1>Registro</h1>
