--- a/index.html
+++ b/index.html
@@ -5,24 +5,48 @@
 		<meta name="keywords" content="portfolio, webstack, programador" />
 		<meta charset="utf-8"/>
 		<meta name="description" content="portfolio web"/>
-	    <link rel="stylesheet" href="styles.css"/>
-
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href=".\bootstrap-5.2.3-dist\css\bootstrap.css"/>
+		<!-- Bootstrap JS -->
+		<script src=".\bootstrap-5.2.3-dist\js\bootstrap.min.js"></script>
 		<title>Titulo de Navegador</title>
 	</head>
-	
-	<body>
-		<header>
-			<h1>Titulo Principal de la Pagina</h1>
-			<a class="log" href="login.html">Iniciar sesion</a>
-			<a class="log" href="registro.html">Registro</a>
-		</header>
-		<article>
-			<p>///Trabajando///</p>
-			<img src="https://media.tenor.com/OQKmgtcvz6MAAAAM/monkey-cymbal.gif" alt="*Trabajando*" width="40%"><br>
-		</article>
-		<footer>
-			<p>Numfar</p>
-		</footer>
+	<!-- Navbar -->
+	<body style="background-color: #0f1d26;">
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="index.html">Logo</a>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link active" href="login.html">Login</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="registro.html">Registro</a>
+				</li>
+			</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- Contenido -->
+	<header>
+		<img src=".\image\Banner.png" class="img" style="width: 100% ; height: 50vh;" alt="Banner representativo propio">
+	</header>
+		<div class="row-fluid" style="color: white;">
+			<div class="col"><img src=".\image\thumbnail.png" class="img-thumbnail" style="height: 200px; margin-top: 10px; float: left; margin-right: 10px;" alt="thumbnail"></div>
+			<h2>Nombre</h2>
+			<p style="white-space: pre-wrap">Informacion del sujeto.
+y mas cosas..</p>
+			<p style="color: red;">muchas cosas.</p>
+		</div>
+		<div style="color: white; margin-left: 10px;">
+			<br><br><br><h3>Experiencia:</h3>
+			<p>Es nivel 80</p>
+			<p>Fue Mago, Artillero y Activista</p> <br><br>
+		</div>
+	<!-- Navbar Footer -->
+	<nav class="navbar navbar-expand-mb-3 bg-dark navbar-dark fixed-bottom">
+		<span class="navbar-text ms-auto text-white fst-italic" style="padding-right: 12px;">Numfar</span>
+	</nav>
 	</body>
-	
 </html>
