--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 		<!-- Bootstrap JS -->
 		<script src=".\bootstrap-5.2.3-dist\js\bootstrap.min.js"></script>
 		<title>Titulo de Navegador</title>
+		<script src="./main.js" defer></script>
 	</head>
 	<!-- Navbar -->
-	<body style="background-color: #0f1d26;">
+	<body style="background-color: #0f1d26; color:white;">
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html">Logo</a>
@@ -35,18 +36,49 @@
 		<div class="row-fluid" style="color: white;">
 			<div class="col"><img src=".\image\thumbnail.png" class="img-thumbnail" style="height: 200px; margin-top: 10px; float: left; margin-right: 10px;" alt="thumbnail"></div>
 			<h2>Nombre</h2>
-			<p style="white-space: pre-wrap">Informacion del sujeto.
-y mas cosas..</p>
+			<p style="white-space: pre-line">Informacion del sujeto.
+				y mas cosas..</p>
 			<p style="color: red;">muchas cosas.</p>
 		</div>
-		<div style="color: white; margin-left: 10px;">
+		<div style="margin-left: 10px;">
 			<br><br><br><h3>Experiencia:</h3>
-			<p>Es nivel 80</p>
-			<p>Fue Mago, Artillero y Activista</p> <br><br>
+			<p>Nivel 80</p>
+			<p>Mago, Artillero y Activista</p>
+		</div>
+	<!--Editar texto Prueba -->
+		<div onclick="cambiar_parrafo()">
+			<a type="button" class="btn btn-secondary">edit</a>
+		</div>		
+		<div class="border border-light border-3 rounded-3 w-10">
+			<label class="form-label" id="texto_editable" style="padding-left: 5px">*mucho texto*</label>
+		</div>
+		<div>
+			<input id="editar_texto" type="text" oninput="miFuncion(this.value)" style="display:none;">
 		</div>
 	<!-- Navbar Footer -->
-	<nav class="navbar navbar-expand-mb-3 bg-dark navbar-dark fixed-bottom">
-		<span class="navbar-text ms-auto text-white fst-italic" style="padding-right: 12px;">Numfar</span>
+	<nav class="navbar bg-dark navbar-dark">
+		<span class="ms-auto fst-italic" style="padding-right: 12px;">Numfar</span>
 	</nav>
+
 	</body>
+	<!-- texto editable -->
+		<script>
+			function cambiar_parrafo(){
+				event.preventDefault();				//quita la accion por defecto de recargar la pagina al pulsar el botón
+				document.getElementById("editar_texto").style.display="block";		//se cambia el estilo a "no oculto"
+				let texto = document.getElementById("editar_texto").innerText;
+				console.log(texto);
+			};
+
+			function miFuncion(valor){
+				document.getElementById("texto_editable").innerText=valor;			//se edita el texto
+			};
+
+			let textarea = document.getElementById("editar_texto")
+			textarea.addEventListener('keyup', (e) => {								//añade un evento si se "suelta la tecla"
+				if (e.key=="Enter"){												//si se presiona la tecla "Enter"
+					document.getElementById("editar_texto").style.display="none"	//cambia el estilo a "oculto"
+				}
+			});
+		</script>
 </html>
