--- a/login.html
+++ b/login.html
@@ -2,40 +2,50 @@
 <html>
 	<head>
 		<title>Iniciar Sesion</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		<link rel="stylesheet" href=".\bootstrap-5.2.3-dist\css\bootstrap.css"/>
 	</head>
 	
 	<body style="background-color: #0b161d;">
-	<div class="row justify-content-center ">
-	<div class="col-xl-4">
-	<div class="card bg-dark text-white" style="border-radius: 1rem;">
-	<div class="card-body p-5">
-		<form style="width: 22rem; ">
-			<h3 class="text-center">Inicio de Sesion</h3>
-		<!-- Correo -->
-			<div class="form-outline form-white mb-4 text-center">
-				<label for="emailLogin" class="form-label" style="margin-left: 0px;">Correo</label>
-				<input type="email" class="form-control form-control-sm" id="emailLogin" >
-			</div>
-		<!-- Contraseña -->
-			<div class="form-outline mb-4 text-center">
-				<label for="inputPassword" class="form-label">Contraseña</label>
-				<input type="password" class="form-control form-control-sm" id="inputPassword">
-			</div>
-		<!-- Check -->
-			<div class="mb-4 form-check">
-				<input type="checkbox" class="form-check-input" id="check">
-				<label class="form-check-label" for="check" style="text-align: left;">Recordar</label>
-			</div>
-		<!-- Botones -->
-			<div class="row mb4">
-				<button type="submit" class="btn btn-primary">Enviar</button>
-				<a class="btn btn-outline-primary" href="registro.html" role="button" style="margin-top: 10px;">Registrar</a>
-			</div>
-		</form>
-	</div>
-	</div>
-	</div>
-	</div>
+		<div class="container py-4">
+		<div class="row justify-content-center ">
+		<div class="col-xl-5">
+		<div class="card bg-dark text-white" style="border-radius: 1rem;">
+		<div class="card-body p-5">
+			<form style="width: 22rem;">
+				<h3 class="text-center">Inicio de Sesion</h3>
+			<!-- Correo -->
+				<div class="mb-4 text-center">
+					<label for="emailLogin" class="form-label" style="margin-left: 0px;">Correo</label>
+					<input type="email" class="form-control form-control-sm" id="emailLogin" placeholder="nombre@ejemplo.com"/>
+				</div>
+			<!-- Contraseña -->
+				<div class="mb-4 text-center">
+					<label for="inputPassword" class="form-label">Contraseña</label>
+					<input type="password" class="form-control form-control-sm" id="inputPassword" placeholder="Contraseña"/>
+				</div>
+			<!-- Check -->
+				<div class="mb-4 form-check">
+					<input type="checkbox" class="form-check-input" id="check"/>
+					<label class="form-check-label" for="check" style="text-align: left;">Recordar</label>
+				</div>
+			<!-- Botones -->
+				<div class="row" style="margin-left: 0px;margin-right: 0px;">
+					<button type="submit" class="btn btn-primary">Enviar</button>
+					<a class="btn btn-outline-primary" href="registro.html" role="button" style="margin-top: 10px;">Registrar</a>
+				</div>
+			</form>
+		</div>
+		</div>
+		</div>
+		</div>
+		</div>
 	</body>
+	<script>
+		const formulario = document.querySelector('form');
+
+		formulario.addEventListener('submit', event => {
+		event.preventDefault();
+		alert('no hace nada :( (aún)')
+		});
+	</script>
 </html>
