--- a/registro.html
+++ b/registro.html
@@ -1,1 +1,66 @@
-<h1>Registro</h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Registro</title>
+		<link rel="stylesheet" href=".\bootstrap-5.2.3-dist\css\bootstrap.css"/>
+	</head>
+
+	<body style="background-color: #0b161d;">
+		<div class="container py-4">
+		<div class="row justify-content-center">
+		<div class="col-xl-5">
+		<div class="card bg-dark text-white" style="border-radius: 1rem;">
+		<div class="card-body p-5">
+			<form style="width: 22rem;" id="formulario_registro">
+				<h3 class="text-center mb-4">Registro</h3>
+			<!-- Nombre y Apellido -->
+				<div class="row mb-4">
+					<div class="col-md-6">
+						<input type="text" name="nombre" id="registro_nombre" class="form-control form-control-sm" placeholder="Nombre"/>
+					</div>
+					<div class="col-md-6">
+						<input type="text" name="apellido" id="registro_apellido" class="form-control form-control-sm" placeholder="Apellido"/>	
+					</div>
+				</div>
+			<!-- email -->
+				<div class="mb-4">
+					<input type="email" name="email" class="form-control form-control-sm" id="emailLogin" placeholder="nombre@ejemplo.com"/>
+				</div>
+			<!-- contraseña -->
+				<div class="mb-4">
+					<input type="password" name="contraseña" class="form-control form-control-sm" id="inputPassword" placeholder="Contraseña"/>
+				</div>
+			<!-- boton -->
+				<div class="row" style="margin-left: 0px;margin-right: 0px;">
+					<button type="submit" class="btn btn-primary" style="margin-top: 10px;">Registrar</button>
+				</div>
+			</form>
+		</div>
+		</div>		
+		</div>
+		</div>
+		</div>
+		<script>
+			const formulario = document.querySelector('form');
+
+			formulario.addEventListener('submit', event => 
+			{
+				event.preventDefault();
+
+				const formData = new FormData(formulario);
+				const data = Object.fromEntries(formData);
+
+				fetch('https://httpbin.org/post', { //llama al servidor
+						method: 'POST',  // POST o GET
+						headers: {
+							'Content-Type': 'application/json'
+						},
+						body: JSON.stringify(data)
+					}).then(alert('vamos a decir que se registró correctamente'))
+					  .then(res => res.json())
+					  .then(data => console.log(data))
+					  .catch(error => console.log(error))
+			});
+		</script>
+	</body>
+</html>
